项目完整的框架及测试的例子

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -10,3 +10,9 @@ log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.A3.MaxFileSize=1024KB
 log4j.appender.A3.MaxBackupIndex=10
 log4j.appender.file.layout.ConversionPattern=%d %p [%c] - %m%n
+
+# \u6253\u5370sql\u8BED\u53E5:debug; \u6267\u884C\u7ED3\u679C:trace
+## \u6307\u5B9Amapper\u914D\u7F6E\u6587\u4EF6\u4E2D\u7684namespace
+#com.feifan.mapper.UserMapper \u5355\u4E2A\u63A5\u53E3
+#com.feifan.mapper\u5305\u4E0B\u9762\u6240\u6709\u7684
+log4j.logger.com.example.my.shop.mybatis.mapper =TRACE
